modules/015-admission-policy-engine/charts/constraint-templates/tests/revision-history/allowed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allowed
  namespace: default
spec:
  revisionHistoryLimit: 3
  template:
    spec:
      containers:
        - name: foo
  selector:
    matchLabels:
      foo: bar
